fixed event prompt cutting off issue
Let me know if it is still cutting off :P

--- a/NEST-App/Content/Map/GOOG/MapGOOG.css
+++ b/NEST-App/Content/Map/GOOG/MapGOOG.css
@@ -271,8 +271,8 @@ html, body, #map-canvas {
     border: none;
     position: fixed;
     margin: auto;
-    width: 200px;
-    height: 150px;
+    width: 300px;
+    height: 170px;
     right: 5px;
     bottom: 5px;
     overflow: auto;
@@ -282,7 +282,7 @@ html, body, #map-canvas {
 
 #RoundRobin_popup {
     position: fixed;
-    width: 200px;
+    width: 300px;
     padding: 10px;
     border: 2px solid red;
     border-radius: 10px;
